--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Útiköltség elszámolása</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+		<script src="script.js"></script>
 	</head>
 
 	<body>
 		<form class="container">
-			<h1>Útiköltség-elszámolás</h1>
+			<h1 class="my-5">Útiköltség-elszámolás</h1>
 
 			<!--Személyes adatok-->
 			<h3>Személyes adatok</h3>
@@ -130,7 +131,7 @@
 				<div class="col-sm-6" id="osszeskoltseg">0 Ft</div>
 			</div>
 
-			<button type="button" class="btn btn-primary" onclick="nyomtatas()">Nyomtatás</button>
+			<button type="button" class="btn btn-primary mb-5" onclick="nyomtatas()">Nyomtatás</button>
 		</form>
 	</body>
 </html>
