--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Útiköltség elszámolása</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
@@ -140,12 +141,14 @@
 
 			<button type="button" class="btn btn-primary mb-5" id="anyomtatas" onclick="nyomtatas()" disabled>Nyomtatás</button>
 		
-			<div id="alairas">
+			<div class="alairas mt-5">
+				<div class="my-5">Aláírásommal igazolom, hogy az adatok a valóságnak megfelelnek.</div>
+
 				.........................................................., <span id="datum"></span>
 
-				<div>
-					..........................................................
-					<span>Aláírás</span>
+				<div class="text-center float-right mt-5">
+					..........................................................<br>
+					<span>aláírás</span>
 				</div>
 			</div>
 		</form>
