--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div class="form-group row">
 				<label for="uzemanyag" class="col-sm-6 col-form-label">Üzemanyag fajtája:</label>
 				<div class="col-sm-6">
-					<select class="form-control" id="uzemanyag">
+					<select class="form-control" id="uzemanyag" onchange="uzemanyagvaltozas()">
 						<option value="benzin">Benzin</option>
 						<option value="gazolaj">Gázolaj</option>
 					</select>
